--- a/res/layout/activity_tab.xml
+++ b/res/layout/activity_tab.xml
@@ -5,36 +5,35 @@
     android:orientation="horizontal"
     tools:context="${relativePackage}.${activityClass}" >
 
-    
-    <LinearLayout 
+    <LinearLayout
         android:layout_width="0dp"
-        android:layout_weight="1"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-          <Button
-        android:id="@+id/tab_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="fragment1" />
-    
-    <Button
-        android:id="@+id/tab_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="fragment2" />
-    <Button
-        android:id="@+id/tab_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="fragment3" />
+        android:layout_weight="1"
+        android:orientation="vertical" >
+
+        <Button
+            android:id="@+id/tab_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="fragment1" />
+
+        <Button
+            android:id="@+id/tab_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="fragment2" />
+
+        <Button
+            android:id="@+id/tab_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="fragment3" />
     </LinearLayout>
-    
-    <FrameLayout 
+
+    <FrameLayout
         android:id="@+id/fragment_content"
         android:layout_width="0dp"
-        android:layout_weight="3"
         android:layout_height="match_parent"
-        />
-  
+        android:layout_weight="3" />
 
 </LinearLayout>
