--- a/res/layout/fragment_tab.xml
+++ b/res/layout/fragment_tab.xml
@@ -8,5 +8,12 @@
         android:id="@+id/content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    
+    <Button 
+        android:visibility="gone"
+        android:text="translate_data"
+        android:id="@+id/translate_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
